--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,7 +113,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/loginNoAccBtn"
         android:layout_width="wrap_content"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_height="wrap_content"
