--- a/app/src/main/res/layout/horizontal_recipes_list.xml
+++ b/app/src/main/res/layout/horizontal_recipes_list.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="320dp"
-    android:background="@drawable/recipes_list_border">
+    android:layout_height="320dp">
 
     <TextView
         android:layout_width="match_parent"
