--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="piotr.michalkiewicz.mealplannerclient.view.main_menu.MainMenuActivity"
+    tools:context="piotr.michalkiewicz.mealplannerclient.view.menu.MainMenuActivity"
     tools:showIn="@layout/activity_main_menu">
 
     <FrameLayout
